--- a/ui/assets/css/style.css
+++ b/ui/assets/css/style.css
@@ -14,6 +14,10 @@
   padding: 50px;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  border-radius: 3px;
+}
+.form .error {
+  border-bottom: 1px solid #c0392b !important;
 }
 .form input {
   font-family: "Roboto", sans-serif;
@@ -29,19 +33,22 @@
 .form button {
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
+  letter-spacing: 1px;
   outline: 0;
-  background: #6495ED;
+  background: #4881ea;
   width: 100%;
   border: 0;
   padding: 15px;
   color: #FFFFFF;
   font-size: 14px;
-  -webkit-transition: all 0.3 ease;
-  transition: all 0.3 ease;
+  -webkit-transition: all 300ms ease;
+  transition: all 300ms ease;
   cursor: pointer;
+  border-radius: 3px;
 }
 .form button:hover,.form button:active,.form button:focus {
-  background: #6495ED;
+  background: #5f91ec;
+  letter-spacing: 1.5px;
 }
 .form .message {
   margin: 15px 0 0;
@@ -89,11 +96,7 @@
   color: #EF3B3A;
 }
 body {
-  background: #6495ED  ;
-  background: -webkit-linear-gradient(right, #6495ED, #6495ED);
-  background: -moz-linear-gradient(right,#6495ED, #6495ED);
-  background: -o-linear-gradient(right, #6495ED, #6495ED);
-  background: linear-gradient(to left, #6495ED, #6495ED);
+  background: linear-gradient(to right, #4881ea, #a4c0f4);
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;      
